Changed key icon to lock

--- a/style.scss
+++ b/style.scss
@@ -68,7 +68,7 @@ body {
         justify-content: center;
 
         .fa-user,
-        .fa-key {
+        .fa-lock {
           height: 0.9rem;
           margin: 0 10px 0px 25px;
           color: #999292;
