--- a/style.css
+++ b/style.css
@@ -1,11 +1,49 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
-h1 {
-  background-color: pink;
+body {
+  width: 100vw;
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+body h1 {
   text-align: center;
+  margin-bottom: 1rem;
+}
+
+body .container {
+  width: 450px;
+  height: 700px;
+  background: #408ad4;
+}
+
+@media screen and (max-width: 599px) {
+  .container {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    font-size: 2rem;
+    color: white;
+    background-color: green !important;
+  }
 }
 /*# sourceMappingURL=style.css.map */
