--- a/style.scss
+++ b/style.scss
@@ -1,10 +1,38 @@
 * {
-    margin: 0;
-    padding: 0;
-    font-family: 'Montserrat', sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: "Montserrat", sans-serif;
 }
 
-h1 {
-    background-color: pink;
+body {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  h1 {
     text-align: center;
+    margin-bottom: 1rem;
+  }
+  .container {
+    width: 450px;
+    height: 700px;
+    background: #408ad4;
+  }
+}
+
+@media screen and (max-width: 599px) {
+    .container {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .container {
+        font-size: 2rem;
+        color: white;
+        background-color: green !important;
+    }
 }
