--- a/style.scss
+++ b/style.scss
@@ -23,13 +23,13 @@ body {
   }
 }
 
-@media screen and (max-width: 599px) {
+@media all and (max-width: 599px) {
     .container {
         display: none;
     }
 }
 
-@media screen and (min-width: 768px) {
+@media all and (min-width: 768px) {
     .container {
         font-size: 2rem;
         color: white;
