Basic grid with gaps

--- a/style.css
+++ b/style.css
@@ -1,11 +1,24 @@
 * {
-  margin: 0;
   padding: 0;
   font-family: 'Montserrat', sans-serif;
+  font-size: 0.9rem;
 }
 
-h1 {
-  background-color: pink;
-  text-align: center;
+.container > div {
+  background: #eee;
+  padding: 1rem;
+}
+
+.container > div:nth-child(odd) {
+  background: #ddd;
+}
+
+.container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 2fr 1fr 1fr;
+      grid-template-columns: 2fr 1fr 1fr;
+  grid-column-gap: 1rem;
+  grid-row-gap: 2rem;
 }
 /*# sourceMappingURL=style.css.map */
