--- a/style.scss
+++ b/style.scss
@@ -1,56 +1,70 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Montserrat', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
+}
+.description {
+  flex-shrink: 3;
+  padding: 2rem;
+  background: rgb(253, 212, 166);
+  // max-height: 200px;
 }
 
 .container {
-    height: 100vh;
-    border: 20px solid black;
+  margin-bottom: 2rem;
+  height: 100vh;
+  border: 20px solid black;
 
+  .parent {
     display: flex;
-    flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
-    
+    div {
+      // min-width: 200px;
+      min-width: 200px;
 
+      flex-grow: 1;
+    }
     .child1 {
-        width: 200px;
-        height: 200px;
-        background: rgb(39, 61, 134);
+      background: rgb(39, 61, 134);
+
+      // width: 200px;
+      // height: 200px;
+      // This child item will take all the free
+      // available space for itself
+      // flex: 1;
+      // flex-grow: 1;
     }
 
     .child2 {
-        width: 200px;
-        height: 200px;
-        background: rgb(172, 57, 53);
-        // flex-grow: 2;
-        // flex-basis: 45%;
-        flex: 2  0 auto; // combines flex-grow flex-shring and flex-basis in one. Recommended.
+      background: rgb(172, 57, 53);
+      // width: 200px;
+      // height: 200px;
+      // flex-grow: 1;
     }
 
     .child3 {
-        width: 200px;
-        height: 200px;
-        background: rgb(149, 43, 140);
-        // flex-grow: 1; 
-        /// Adds all available horizontal space (because we are in row mode) and add that space to child3
+      background: rgb(149, 43, 140);
+      // width: 200px;
+      // height: 200px;
+      // flex: 1;
     }
 
-
-    // .child4 {
-    //     width: 200px;
-    //     height: 200px;
-    //     background: rgb(243, 176, 88);
-    //     order: 3;
-    // }
-
-    .child1, .child2, .child3, .child4 {
-        color: white;
-        text-transform: uppercase;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+    .child4 {
+      // width: 200px;
+      // height: 200px;
+      background: rgb(187, 122, 49);
     }
+  }
+
+  .child1,
+  .child2,
+  .child3,
+  .child4 {
+    color: white;
+    // text-transform: uppercase;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
