--- a/style.scss
+++ b/style.scss
@@ -1,70 +1,49 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Montserrat", sans-serif;
-}
-.description {
-  flex-shrink: 3;
-  padding: 2rem;
-  background: rgb(253, 212, 166);
-  // max-height: 200px;
+  // margin: 0;
+  // padding: 0;
+  // box-sizing: border-box;
+  // font-family: "Montserrat", sans-serif;
 }
 
 .container {
-  margin-bottom: 2rem;
-  height: 100vh;
-  border: 20px solid black;
+  background-color: pink;
+  height: 50vh;
+  width: 50vw;
+  padding: 0.5em;
+  margin: 25vh auto 0;
 
-  .parent {
-    display: flex;
-    flex-wrap: wrap;
-    div {
-      // min-width: 200px;
-      min-width: 200px;
+  /* flex section tutorial - container properties */
+  /* -------------------------------------------- */
 
-      flex-grow: 1;
-    }
-    .child1 {
-      background: rgb(39, 61, 134);
+  // flex-direction defaults to row
+  // other props: row-reverse
+  display: flex;
 
-      // width: 200px;
-      // height: 200px;
-      // This child item will take all the free
-      // available space for itself
-      // flex: 1;
-      // flex-grow: 1;
-    }
+  // flex-wrap defaults to nowrap
+  // flex-flow:  shortcut for flex wrap and flex direction
+  // Props: 
+  flex-wrap: wrap; 
 
-    .child2 {
-      background: rgb(172, 57, 53);
-      // width: 200px;
-      // height: 200px;
-      // flex-grow: 1;
-    }
+  // Justify items: defaults to flex-start. Defines alignment
+  // along main axis
+  // main axis will depend on the flex direction (row by default)
+  // Props: flex-start, flex-end, space-between, space-around,
+  // space-evenly
+  justify-content:center; 
 
-    .child3 {
-      background: rgb(149, 43, 140);
-      // width: 200px;
-      // height: 200px;
-      // flex: 1;
-    }
+  // Align items: default to stretch. Defines alignment along
+  // the cross axis.
+  // Props: center, stretch, baseline, flex-end, flex-start
+  align-items: center;
 
-    .child4 {
-      // width: 200px;
-      // height: 200px;
-      background: rgb(187, 122, 49);
-    }
-  }
+  // CONFUSING!! Align content: same props as justify-content. Only works with
+  // multiple lines of content or when wrap is set and the
+  // content is wrapped into multiple lines.
+  // Same props as align-items
+  // align-content: center;
 
-  .child1,
-  .child2,
-  .child3,
-  .child4 {
-    color: white;
-    // text-transform: uppercase;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  .item {
+    background-color: lightblue;
+    margin: 0.5em;
   }
 }
