--- a/style.css
+++ b/style.css
@@ -1,11 +1,125 @@
+@import url("https://fonts.googleapis.com/css?family=Poppins:300,600");
 * {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Poppins';
+  font-size: 1.1rem;
 }
 
-h1 {
-  background-color: pink;
+.hero {
+  background-color: #444;
+  background-image: url("./surf-bg.jpg");
+  background-blend-mode: multiply;
+  background-size: cover;
+  height: 100vh;
+  width: 100vw;
+  padding: 1rem;
+  color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.hero h1 {
+  color: green;
+  font-size: 1rem;
+  text-transform: uppercase;
+  letter-spacing: 0.9rem;
+  outline: 3px solid white;
+  outline-offset: .25rem;
+  margin: 1rem;
+}
+
+.hero h1 span {
+  font-weight: 300;
+  font-size: inherit;
+}
+
+@media (min-width: 40rem) {
+  .hero h1 {
+    font-size: 5rem;
+  }
+}
+
+.sales-points {
+  padding: 12vh;
   text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.sales-points .sales-point {
+  margin: 0 1vw;
+  -ms-flex-preferred-size: 30%;
+      flex-basis: 30%;
+}
+
+h2 {
+  font-size: 1.6rem;
+  margin-bottom: 0.5rem;
+}
+
+.cta {
+  background-image: url("./people-bg.jpg");
+  background-size: cover;
+  background-blend-mode: darken;
+  color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  padding: 10vh 0;
+}
+
+.cta .cta-text {
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+}
+
+@media (min-width: 40rem) {
+  .cta .cta-text {
+    -ms-flex-preferred-size: 50%;
+        flex-basis: 50%;
+  }
+}
+
+.cta .btn {
+  display: inline-block;
+  font-weight: 600;
+  text-decoration: none;
+  background-color: green;
+  color: black;
+  padding: 0.7rem 1.7rem;
+  margin-top: 1rem;
+}
+
+@media (min-width: 40rem) {
+  .sales-points {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
 }
 /*# sourceMappingURL=style.css.map */
