--- a/style.scss
+++ b/style.scss
@@ -1,10 +1,100 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins:300,600');
+
+
 * {
+  box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: 'Montserrat', sans-serif;
+    // font-family: 'Montserrat', sans-serif;
+    font-family: 'Poppins';
+    font-size: 1.1rem;
 }
 
-h1 {
-    background-color: pink;
-    text-align: center;
+.hero {
+  background-color: #444;
+  background-image: url('./surf-bg.jpg');
+  background-blend-mode: multiply;
+  background-size: cover;
+  height: 100vh;
+  width: 100vw;
+  padding: 1rem;
+  color: white;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  h1 {
+    color: green;
+    font-size: 1rem;
+    text-transform: uppercase;
+    letter-spacing: 0.9rem;
+    outline: 3px solid white;
+    outline-offset: .25rem;
+    margin: 1rem;
+    span {
+      font-weight: 300;
+      font-size: inherit;
+    }
+  }
+  @media (min-width: 40rem) {
+    h1 {
+      font-size: 5rem;
+    }
+  }
+
+}
+
+.sales-points {
+  padding: 12vh;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+
+  .sales-point {
+    margin: 0 1vw;
+    flex-basis: 30%;
+  }
+}
+
+h2 {
+  
+  font-size: 1.6rem;
+  margin-bottom: 0.5rem;
+}
+
+.cta {
+  background-image: url('./people-bg.jpg');
+  background-size: cover;
+  background-blend-mode: darken;
+  color: white;
+  display: flex;
+  justify-content: flex-end;
+  padding: 10vh 0;
+
+  .cta-text {
+    flex-basis: 100%;
+
+    @media (min-width: 40rem) {
+      flex-basis: 50%;
+    }
+  }
+
+  .btn {
+    display: inline-block;
+    font-weight: 600;
+    text-decoration: none;
+    background-color: green;
+    color: black;
+    padding: 0.7rem 1.7rem;
+    margin-top: 1rem;
+  }
+}
+
+@media (min-width: 40rem) {
+  .sales-points {
+    flex-direction: row;
+  }
 }
