--- a/style.css
+++ b/style.css
@@ -6,21 +6,15 @@
   margin: 25vh auto 0;
   /* flex section tutorial - container properties */
   /* -------------------------------------------- */
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
 
 .container .item {
   background-color: lightblue;
   margin: 0.5em;
+  /* align-self: center; */
 }
-/*# sourceMappingURL=style.css.map */
