--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 * {
-  padding: 0;
   font-family: 'Montserrat', sans-serif;
   font-size: 0.9rem;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .container > div {
   background: #eee;
-  padding: 1rem;
+  padding: 1em;
 }
 
 .container > div:nth-child(odd) {
@@ -19,6 +20,6 @@
   -ms-grid-columns: 2fr 1fr 1fr;
       grid-template-columns: 2fr 1fr 1fr;
   grid-column-gap: 1rem;
-  grid-row-gap: 2rem;
+  grid-row-gap: 1rem;
 }
 /*# sourceMappingURL=style.css.map */
