--- a/style.scss
+++ b/style.scss
@@ -1,23 +1,24 @@
 * {
     // margin: 0;
-    padding: 0;
+    // padding: 0;
     font-family: 'Montserrat', sans-serif;
     font-size: 0.9rem;
+    box-sizing: border-box;
 }
 
 .container > div {
     background: #eee;
-    padding: 1rem;
+    padding: 1em;
     &:nth-child(odd) {
         background: #ddd;
     }
 }
 
 .container {
-    // The grid tutorial
     display: grid;
+    // grid-template-columns: 40% 30% 30%; 
+    // this above will cause the horizontal scroll bar to show
     grid-template-columns: 2fr 1fr 1fr;
     grid-column-gap: 1rem;
-    grid-row-gap: 2rem;
-    // grid-gap: 1rem;
+    grid-row-gap: 1rem;
 }
