--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 0.9rem;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -17,9 +17,23 @@
 .container {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 2fr 1fr 1fr;
-      grid-template-columns: 2fr 1fr 1fr;
+  -ms-grid-columns: 1fr 2fr 1fr;
+      grid-template-columns: 1fr 2fr 1fr;
   grid-column-gap: 1rem;
   grid-row-gap: 1rem;
+}
+
+.container .nested {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: 70px;
+  grid-gap: 1rem;
+}
+
+.container .nested > div {
+  border: #333 1px solid;
+  padding: 0.5rem;
 }
 /*# sourceMappingURL=style.css.map */
