--- a/style.scss
+++ b/style.scss
@@ -1,24 +1,36 @@
 * {
-    // margin: 0;
-    // padding: 0;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 0.9rem;
-    box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
+  font-size: 0.9rem;
+  box-sizing: border-box;
 }
 
 .container > div {
-    background: #eee;
-    padding: 1em;
-    &:nth-child(odd) {
-        background: #ddd;
-    }
+  background: #eee;
+  padding: 1em;
+  &:nth-child(odd) {
+    background: #ddd;
+  }
 }
 
 .container {
+  display: grid;
+  // grid-template-columns: 40% 30% 30%;
+  // this above will cause the horizontal scroll bar to show
+  grid-template-columns: 1fr 2fr 1fr;
+  // A shorter syntax: use repeate( x times, the fraction)
+  //   grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 1rem;
+  grid-row-gap: 1rem;
+
+  .nested {
     display: grid;
-    // grid-template-columns: 40% 30% 30%; 
-    // this above will cause the horizontal scroll bar to show
-    grid-template-columns: 2fr 1fr 1fr;
-    grid-column-gap: 1rem;
-    grid-row-gap: 1rem;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 70px; // To determine the height
+    grid-gap: 1rem;
+
+    & > div {
+      border: #333 1px solid;
+      padding: 0.5rem;
+    }
+  }
 }
