Added responsiveness behaviour

--- a/style.css
+++ b/style.css
@@ -38,13 +38,15 @@ p {
 .container {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[4];
-      grid-template-columns: repeat(4, 1fr);
+  -ms-grid-columns: (minmax(240px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
   grid-gap: 10px;
 }
 
-.container .card-wide {
-  grid-column: span 2 / auto;
+@media screen and (min-width: 760px) {
+  .container .card-wide {
+    grid-column: span 2 / auto;
+  }
 }
 
 .container > div {
