--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
+/* Core Styles */
 body {
   margin: 0;
-  font-family: 'Montserrat', sans-serif;
-  background-color: #333;
+  font-family: Arial, Helvetica, sans-serif;
+  background: #333;
   color: #fff;
-  font-size: 1.1rem;
+  font-size: 1.1em;
   line-height: 1.5;
   text-align: center;
 }
@@ -14,14 +15,16 @@ img {
   height: auto;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   margin: 0;
-  padding: 1rem 0;
+  padding: 1em 0;
 }
 
 p {
   margin: 0;
-  padding: 1rem 0;
+  padding: 1em 0;
 }
 
 .btn {
@@ -29,57 +32,55 @@ p {
   background: #333;
   color: #fff;
   text-decoration: none;
-  padding: 1rem 2rem;
+  padding: 1em 2em;
   border: 1px solid #666;
-  border-radius: 5px;
-  margin: 1.5rem;
+  margin: 0.5em 0;
 }
 
 .btn:hover {
-  background: #EAEAEA;
+  background: #eaeaea;
   color: #333;
 }
 
 /* Header Showcase */
 #showcase {
-  min-height: 550px;
+  min-height: 450px;
   color: #fff;
   text-align: center;
 }
 
 #showcase .bg-image {
   position: absolute;
-  background: #333 url("./images/pexels-luis.jpg");
+  background: #333 url("https://static.pexels.com/photos/248515/pexels-photo-248515.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  height: 550px;
+  height: 450px;
   z-index: -1;
-  opacity: 0.3;
+  opacity: 0.4;
 }
 
 #showcase h1 {
-  padding-top: 4rem;
+  padding-top: 100px;
   padding-bottom: 0;
 }
 
-#showcase .content-wrap {
-  padding: 0 1.5rem;
-}
-
-#section-a {
-  background-color: #EAEAEA;
-  color: #333;
-  padding-bottom: 2rem;
-}
-
+#showcase .content-wrap,
 #section-a .content-wrap {
-  padding: 0 1.5rem;
+  padding: 0 1.5em;
 }
 
+/* Section A */
+#section-a {
+  background: #eaeaea;
+  color: #333;
+  padding-bottom: 2em;
+}
+
+/* Section B */
 #section-b {
-  padding: 2rem 1rem 1rem;
+  padding: 2em 1em 1em;
 }
 
 #section-b ul {
@@ -88,41 +89,43 @@ p {
   padding: 0;
 }
 
-#section-b ul li {
-  margin-bottom: 1rem;
-  background-color: #FFF;
+#section-b li {
+  margin-bottom: 1em;
+  background: #fff;
   color: #333;
 }
 
 .card-content {
-  padding: 1.5rem;
+  padding: 1.5em;
 }
 
 /* Section C */
 #section-c {
-  background-color: #fff;
+  background: #fff;
   color: #333;
-  padding: 2rem;
+  padding: 2em;
 }
 
+/* Section D / Boxes */
 #section-d .box {
-  padding: 2rem;
+  padding: 2em;
   color: #fff;
 }
 
 #section-d .box:first-child {
-  background-color: #2690D4;
+  background: #2690d4;
 }
 
+/* Footer */
 #main-footer {
-  padding: 2rem;
+  padding: 2em;
   background: #000;
   color: #fff;
   text-align: center;
 }
 
 #main-footer a {
-  color: #2690D4;
+  color: #2690d4;
   text-decoration: none;
 }
 
@@ -131,6 +134,37 @@ p {
   .grid {
     display: -ms-grid;
     display: grid;
+    -ms-grid-columns: 1fr (minmax(auto, 25em))[2] 1fr;
+        grid-template-columns: 1fr repeat(2, minmax(auto, 25em)) 1fr;
+  }
+  #section-a .content-text {
+    -webkit-columns: 2;
+            columns: 2;
+    -webkit-column-gap: 2em;
+            column-gap: 2em;
+  }
+  #section-a .content-text p {
+    padding-top: 0;
+  }
+  .content-wrap,
+  #section-b ul {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 2;
+    grid-column: 2/4;
+  }
+  .box,
+  #main-footer div {
+    grid-column: span 2;
+  }
+  #section-b ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+  #section-b li {
+    width: 31%;
   }
 }
 /*# sourceMappingURL=style.css.map */
