--- a/style.css
+++ b/style.css
@@ -1,11 +1,31 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
-h1 {
-  background-color: pink;
-  text-align: center;
+.grid-container {
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 1rem;
+}
+
+.header,
+.footer {
+  background-color: aqua;
+}
+
+.menu {
+  background-color: rosybrown;
+}
+
+.content {
+  background-color: bisque;
 }
 /*# sourceMappingURL=style.css.map */
