--- a/style.scss
+++ b/style.scss
@@ -1,10 +1,25 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Montserrat", sans-serif;
 }
 
-h1 {
-    background-color: pink;
-    text-align: center;
+.grid-container {
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+}
+
+.header,
+.footer {
+    background-color: aqua;
+}
+
+.menu {
+    background-color: rosybrown;
+}
+
+.content {
+    background-color: bisque;
 }
