--- a/base.css
+++ b/base.css
@@ -42,31 +42,4 @@ body {
   -webkit-transform: translateY(-3px) scale(1.1);
           transform: translateY(-3px) scale(1.1);
 }
-
-h1 {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.photo-grid {
-  display: -ms-grid;
-  display: grid;
-  gap: 1rem;
-  -ms-grid-columns: (minmax(240px, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-  grid-auto-rows: 240px;
-}
-
-@media screen and (min-width: 600px) {
-  .card-tall {
-    grid-row: span 2 / auto;
-  }
-  .card-wide {
-    grid-column: span 2 / auto;
-  }
-}
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=base.css.map */
