--- a/style.scss
+++ b/style.scss
@@ -1,25 +1,21 @@
-* {
-    margin: 0;
-    padding: 0;
-    font-family: "Montserrat", sans-serif;
-}
+@import "./base";
 
-.grid-container {
-    display: grid;
+h1 {
+    display: flex;
     justify-content: center;
-    align-items: center;
-    padding: 1rem;
 }
-
-.header,
-.footer {
-    background-color: aqua;
+.photo-grid {
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+    grid-auto-rows: 240px;
 }
+@media screen and (min-width: 600px) {
+    .card-tall {
+        grid-row: span 2 / auto;
+    }
 
-.menu {
-    background-color: rosybrown;
-}
-
-.content {
-    background-color: bisque;
+    .card-wide {
+        grid-column: span 2 / auto;
+    }
 }
