--- a/style.css
+++ b/style.css
@@ -1,44 +1,100 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap");
 * {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
   margin: 0;
   padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body {
-  background: #333;
-  color: #fff;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  background: #fff;
+  color: #000;
+  font-size: 15px;
+  line-height: 1.5;
 }
 
-h2 {
-  font-size: 45px;
-  font-weight: 300;
-  margin: 10px;
+body a {
+  color: #262626;
+  text-decoration: none;
 }
 
-h2 span {
-  font-size: 30px;
-}
-
-p {
-  font-size: 20px;
+body ul {
+  list-style: none;
 }
 
 .container {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (1fr)[4];
-      grid-template-columns: repeat(4, 1fr);
-  grid-gap: 10px;
+  width: 90%;
+  max-width: 1100px;
+  margin: auto;
+  /* Showcase */
+  /* Home cards */
 }
 
-.container > div {
+.container .main-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 60px;
+  font-size: 13px;
+}
+
+.container .main-nav .logo {
+  width: 150px;
+}
+
+.container .main-nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.container .main-nav ul li {
+  padding: 0 10px;
+}
+
+.container .main-nav ul li a {
+  padding-bottom: 5px;
+}
+
+.container .main-nav ul li a:hover {
+  border-bottom: 2px solid #262626;
+}
+
+.container .main-nav .main-menu {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  margin-left: 20px;
+}
+
+.container .btn {
   cursor: pointer;
-  height: 210px;
+  background-color: #262626;
+  border: 0;
+  font-weight: bold;
+  font-size: 15px;
+  display: inline-block;
+  padding: 10px 20px;
+  color: #fff;
+}
+
+.container .btn:hover {
+  opacity: 0.9;
+}
+
+.container .showcase {
+  background-image: url("./img/slide1.png");
+  height: 400px;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
   background-size: cover;
-  background-attachment: fixed;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -46,53 +102,90 @@ p {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   text-align: center;
-  -webkit-transition: all 0.5s ease-in;
-  transition: all 0.5s ease-in;
+  padding-bottom: 50px;
+  margin-bottom: 20px;
 }
 
-.container > div:hover {
-  opacity: 0.7;
-  -webkit-transform: scale(0.98);
-          transform: scale(0.98);
+.container .showcase h2,
+.container .showcase p {
+  margin-bottom: 10px;
 }
 
-.container > div:nth-of-type(1) {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
-  grid-column: 1 / 3;
+.container .showcase .btn {
+  margin-top: 20px;
 }
 
-.container > div:nth-of-type(6) {
-  -ms-grid-column: 3;
-  -ms-grid-column-span: 2;
-  grid-column: 3 / 5;
+.container .home-cards {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[4];
+      grid-template-columns: repeat(4, 1fr);
+  grid-gap: 20px;
+  margin-bottom: 20px;
 }
 
-.container > div:nth-of-type(9) {
-  -ms-grid-column: 3;
-  -ms-grid-column-span: 2;
-  grid-column: 3 / 5;
+.container .home-cards img {
+  width: 100%;
+  margin-bottom: 20px;
 }
 
-.container > div:nth-of-type(10) {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
-  grid-column: 1 / 3;
+.container .home-cards h3 {
+  margin-bottom: 5px;
 }
 
-.bg1 {
-  background: url("https://i.ibb.co/dBLbrRV/bg1.jpg");
+.container .home-cards a {
+  display: inline-block;
+  color: #0067b8;
+  padding-top: 30px;
+  text-transform: uppercase;
+  font-weight: bold;
 }
 
-.bg2 {
-  background: url("https://i.ibb.co/Fb5jb3J/bg2.jpg");
-  color: #333;
+.container .home-cards .card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.container .xbox {
+  background-image: url("./img/xbox.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 350px;
+  width: 100%;
+}
+
+.container .xbox .content {
+  width: 40%;
+  padding: 50px 0 0 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.container .xbox .content p {
+  margin: 10px 0 20px;
 }
 /*# sourceMappingURL=style.css.map */
