--- a/style.scss
+++ b/style.scss
@@ -1,10 +1,146 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Montserrat', sans-serif;
+    box-sizing: border-box;
 }
 
-h1 {
-    background-color: pink;
-    text-align: center;
+body {
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    background: #fff;
+    color: #000;
+    font-size: 15px;
+    line-height: 1.5;
+
+    a {
+        color: #262626;
+        text-decoration: none;
+    }
+
+    ul {
+        list-style: none;
+    }
+}
+
+.container {
+    width: 90%;
+    max-width: 1100px;
+    margin: auto;
+
+    .main-nav {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        height: 60px;
+        font-size: 13px;
+
+        .logo {
+            width: 150px;
+        }
+        ul {
+            display: flex;
+            li {
+                padding: 0 10px;
+                a {
+                    padding-bottom: 5px;
+                }
+                a:hover {
+                    border-bottom: 2px solid #262626;
+                }
+            }
+        }
+        .main-menu {
+            flex: 1;
+            margin-left: 20px;
+        }
+    }
+    .btn {
+        cursor: pointer;
+        background-color: #262626;
+        border: 0;
+        font-weight: bold;
+        font-size: 15px;
+        display: inline-block;
+        padding: 10px 20px;
+        color: #fff;
+        &:hover {
+            opacity: 0.9;
+        }
+    }
+    /* Showcase */
+    .showcase {
+        background-image: url("./img/slide1.png");
+        height: 400px;
+        width: 100%;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        align-items: center;
+        text-align: center;
+        padding-bottom: 50px;
+        margin-bottom: 20px;
+
+        h2,
+        p {
+            margin-bottom: 10px;
+        }
+
+        .btn {
+            margin-top: 20px;
+        }
+    }
+
+    /* Home cards */
+    .home-cards {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-gap: 20px;
+        margin-bottom: 20px;
+
+        img {
+            width: 100%;
+            margin-bottom: 20px;
+        }
+
+        h3 {
+            margin-bottom: 5px;
+        }
+
+        a {
+            display: inline-block;
+            color: #0067b8;
+            padding-top: 30px;
+            text-transform: uppercase;
+            font-weight: bold;
+        }
+
+        .card {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+        }
+    }
+
+    .xbox {
+        background-image: url("./img/xbox.png");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        height: 350px;
+        width: 100%;
+
+        .content {
+            width: 40%;
+            padding: 50px 0 0 30px;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+
+            p {
+                margin: 10px 0 20px;
+            }
+        }
+    }
 }
