--- a/style.css
+++ b/style.css
@@ -168,6 +168,7 @@ body ul {
   background-position: center;
   height: 350px;
   width: 100%;
+  margin-bottom: 20px;
 }
 
 .container .xbox .content {
@@ -187,5 +188,76 @@ body ul {
 
 .container .xbox .content p {
   margin: 10px 0 20px;
+}
+
+.container .carbon-dark {
+  background-image: url("./img/carbon.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 350px;
+  width: 100%;
+  color: #fff;
+}
+
+.container .carbon-dark .content {
+  width: 60%;
+  padding: 100px 0 0 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.container .carbon-dark .content p {
+  margin: 10px 0 20px;
+}
+
+.container .carbon-dark .btn {
+  background-color: #f4f4f4;
+  color: #333;
+}
+
+.container .follow {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 40px 0;
+}
+
+.container .follow img {
+  padding: 0px 10px;
+}
+
+/* Links : links > links-inner > ul > li > a */
+.links {
+  background-color: #f2f2f2;
+  color: #616161;
+  font-size: 12px;
+  padding: 35px 0;
+}
+
+.links .links-inner {
+  max-width: 1100px;
+  margin: 0 auto;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[6];
+      grid-template-columns: repeat(6, 1fr);
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 /*# sourceMappingURL=style.css.map */
