--- a/style.scss
+++ b/style.scss
@@ -130,6 +130,7 @@ body {
         background-position: center;
         height: 350px;
         width: 100%;
+        margin-bottom: 20px;
 
         .content {
             width: 40%;
@@ -142,5 +143,58 @@ body {
                 margin: 10px 0 20px;
             }
         }
+    }
+
+    .carbon-dark {
+        background-image: url("./img/carbon.jpg");
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        height: 350px;
+        width: 100%;
+        color: #fff;
+
+        .content {
+            width: 60%;
+            padding: 100px 0 0 30px;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+
+            p {
+                margin: 10px 0 20px;
+            }
+        }
+
+        .btn {
+            background-color: #f4f4f4;
+            color: #333;
+        }
+    }
+
+    .follow {
+        display: flex;
+        align-items: center;
+        margin: 40px 0;
+        img {
+            padding: 0px 10px;
+        }
+    }
+}
+
+/* Links : links > links-inner > ul > li > a */
+.links {
+    background-color: #f2f2f2;
+    color: #616161;
+    font-size: 12px;
+    padding: 35px 0;
+
+    .links-inner {
+        max-width: 1100px;
+        margin: 0 auto;
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        justify-content: center;
+        align-items: center;
     }
 }
