--- a/style.css
+++ b/style.css
@@ -238,6 +238,7 @@ body ul {
   padding: 0px 10px;
 }
 
+/* End of container div */
 /* Links : links > links-inner > ul > li > a */
 .links {
   background-color: #f2f2f2;
@@ -267,6 +268,7 @@ body ul {
   line-height: 2.8;
 }
 
+/* End of links container */
 .footer {
   background-color: #f2f2f2;
   color: #616161;
@@ -315,5 +317,95 @@ body ul {
 .footer .footer-inner ul li {
   margin-right: 30px;
   margin-bottom: 20px;
+}
+
+/* End of footer container div */
+.menu-btn {
+  cursor: pointer;
+  position: absolute;
+  top: 18px;
+  right: 30px;
+  z-index: 9;
+  display: none;
+  -webkit-transition: 250ms ease-in;
+  transition: 250ms ease-in;
+}
+
+.menu-btn:hover {
+  opacity: 0.8;
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+@media screen and (max-width: 700px) {
+  .menu-btn {
+    display: block;
+  }
+  .container .main-nav .main-menu {
+    font-size: 14px;
+    display: block;
+    margin: 0;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 50%;
+    height: 100vh;
+    padding: 30px 50px;
+    background-color: #f2f2f2;
+    opacity: 0.9;
+    -webkit-transform: translateX(-350px);
+            transform: translateX(-350px);
+    border-right: #ccc 1px solid;
+    -webkit-transition: -webkit-transform 400ms ease-in-out;
+    transition: -webkit-transform 400ms ease-in-out;
+    transition: transform 400ms ease-in-out;
+    transition: transform 400ms ease-in-out, -webkit-transform 400ms ease-in-out;
+  }
+  .container .main-nav .main-menu.show {
+    -webkit-transform: translateX(-20px);
+            transform: translateX(-20px);
+  }
+  .container .main-nav .main-menu li {
+    border-bottom: 1px solid #b6b4b4;
+    padding: 10px 0;
+  }
+  .container .main-nav .main-menu li:last-child {
+    border: 0;
+  }
+  .container .main-nav .main-menu li a:hover {
+    border: none;
+    color: black;
+  }
+  .container .main-nav .right-menu {
+    margin-right: 50px;
+  }
+  .container .home-cards {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+  }
+  .container .xbox .content p {
+    display: none;
+  }
+  .container .xbox .content .btn {
+    margin-top: 40px;
+  }
+  .links .links-inner {
+    -ms-grid-columns: (1fr)[3];
+        grid-template-columns: repeat(3, 1fr);
+  }
+  .container .carbon-dark .content {
+    width: 85%;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .container .home-cards {
+    -ms-grid-columns: (1fr)[1];
+        grid-template-columns: repeat(1, 1fr);
+  }
+  .links .links-inner {
+    -ms-grid-columns: (1fr)[1];
+        grid-template-columns: repeat(1, 1fr);
+  }
 }
 /*# sourceMappingURL=style.css.map */
